--- a/style.css
+++ b/style.css
@@ -1,18 +1,35 @@
-body {
-    font-family: Verdana, Tahoma, sans-serif, sans-serif;
-  }
-  
-  table, td {
-    border: 1px solid gray;
-  }
-  
-  td {
-    margin: 0;
-    width: 300px;
-    padding: 3px;
-  }
-  
-  th {
-    background-color: lightblue;
-  }
-  
+
+
+
+
+
+button {
+    margin: 12px;
+    float:right;
+}
+
+header {
+    margin: 2px;
+    background-color: rgb(189, 157, 189);
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+    padding: 12px;
+}
+
+th {
+    background-color: rgb(189, 157, 189);
+    
+}
+
+main {
+    background-color: blanchedalmond;
+    position: relative;
+}
+.cost{
+    margin: 12px;
+    align-content: space-around;
+    font-family: Arial, Helvetica, sans-serif;
+}
+.form-group-row{
+    margin: 12px;
+}
