--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ button {
 }
 
 header {
-    margin: 2px;
+    margin: 20px;
     background-color: rgb(189, 157, 189);
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
@@ -21,7 +21,7 @@ th {
     
 }
 
-main {
+body {
     background-color: blanchedalmond;
     position: relative;
 }
